--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="horizontal-track">
                     <div class="panel panel-1"><div class="panel-content"><h2>The Electronic Era</h2><p>The transition from mechanical to electronic computation marked a fundamental shift in how we process information. Vacuum tubes and transistors replaced gears and levers, ushering in an era of unprecedented speed and reliability.</p></div></div>
                     <div class="panel panel-2"><img src="./images/transistor.png" alt="Transistor"><div class="panel-content"><h3>The Transistor Revolution</h3><p>Invented at Bell Labs in 1947, the transistor was the breakthrough that made modern computing possible. Smaller, faster, and more reliable than vacuum tubes, transistors became the building blocks of integrated circuits, enabling the exponential growth in computing power known as Moore's Law.</p></div></div>
-                    <div class="panel panel-3"><img src="./images/eniac.png" alt="ENIAC"><div class="panel-content image-caption"></div>
+                    <div class="panel panel-3"><img src="./images/eniac.PNG" alt="ENIAC"><div class="panel-content image-caption"></div>
                 </div>
             </div>
         </section>
